--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .nav_link_hover {
+    @apply relative;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  .nav_link_hover::after {
+    @apply content-[""] absolute left-1/2 -translate-x-1/2 bottom-0 w-0 h-px bg-black transition-["width"] duration-300 ease-in-out;
+  }
+
+  .nav_link_hover:hover::after {
+    @apply w-full;
+  }
 }
